# words-api

./: Cargo.toml
assets/: word_detail_prompt.txt
src/: extra.rs  main.rs
src/controllers/: word_controller.rs
src/routes/: word_routes.rs
src/services/: ai.rs  db.rs  word.rs
