[package]
name = "words-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
dotenv = "0.15.0"
once_cell = "1.21.3"
openai_api_rust = "0.1.9"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.38", features = ["full"] }
tokio-postgres = "0.7.16"
